# poe-minimizer

./: Cargo.toml  LICENSE  README.md  Settings.toml  activity.diagram.txt  log-examples.txt
.github/workflows/: release.yaml  rust-release.yml  rust.yml
assets/diagrams/: activity.diagram.txt  stylesheet.iuml
src/: main.rs  tray.rs  utils.rs  winutils.rs
